# CTF_Assets

./: .gitignore  .python-version  .python-version.bk  LICENSE  README.md  env_example_file  pyproject.toml  requirements.txt  setup.py  tree.txt
ctf_assets/: __init__.py  __main__.py  challenge_generator.py  challenge_metadata.py  config.py  flag_generator.py  image_generator.py  jay_openai_community_code.py  story_generator.py  test.py
ctf_assets/schema/: json_schema.py
ctf_assets/utils/: .prompts.py.swp  __init__.py  create_file.py  helpers.py  initialize_client.py  prompts.py  prompts_image.py  response_parser.py
